# frepi

./: .env.example  .gitignore  ARCHITECTURE-ITERATION-CYCLE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
deploy/: GCP_DEPLOYMENT.md  deploy.sh  frepi-agent.service  setup.sh
docs/: DATA_FLOWS.md  UX_GUIDE.md
frepi_agent/: __init__.py  agent.py  config.py  main.py
frepi_agent/integrations/: __init__.py  telegram_bot.py
frepi_agent/prompts/: __init__.py
frepi_agent/restaurant_facing_agent/: __init__.py  agent.py
frepi_agent/restaurant_facing_agent/prompts/: customer_agent.py
frepi_agent/restaurant_facing_agent/subagents/: __init__.py
frepi_agent/restaurant_facing_agent/tools/: pricing.py  product_search.py  supabase_client.py  suppliers.py
frepi_agent/services/: heartbeat.py
frepi_agent/shared/: __init__.py  engagement_scoring.py  preference_drip.py  supabase_client.py  user_identification.py
frepi_agent/supplier_facing_agent/: __init__.py  agent.py
frepi_agent/supplier_facing_agent/prompts/: __init__.py  supplier_agent.py
frepi_agent/supplier_facing_agent/subagents/: __init__.py
frepi_agent/supplier_facing_agent/tools/: __init__.py  (+4 more)
frepi_agent/tools/: __init__.py  embeddings.py  pricing.py  product_search.py  suppliers.py
scripts/: test_connection.py
tests/: __init__.py  conftest.py  test_agent.py  test_matrix.yaml
tests/fixtures/: __init__.py  sample_prices.json  sample_products.json  sample_suppliers.json
tests/helpers/: __init__.py  assertions.py  report_generator.py  test_loader.py
(+24 files in other folders)
